# oneshot3d-game.com

./: .dockerignore  .gitignore  .global.d.ts  Dockerfile  LICENSE  README.md  astro-i18next.config.mjs.old  astro-i18next.config.ts  astro.config.mjs  compose.yml  eslint.config.ts  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
admin/: index.html  package.json
admin/src/: App.tsx
admin/src/layouts/: LayoutNorm.tsx
admin/src/pages/: Login.tsx
api/: .gitignore  Cargo.toml  Dockerfile  README.md  package.json  tsconfig.json
api/common/src/countdown/: ct_timer.rs  mod.rs
api/config/: localization_enUS.json
api/core/: Cargo.toml
api/core/src/: main.rs
api/data/: .gitignore  countdown.example.json  countdown.json  socials.example.json  socials.json
api/src/: index.ts  messages.ts  swagger.config.mjs  swagger.config.ts
api/src/features/: bugreporting.ts  countdown.ts
api/src/features/error_gen/: error_generator.ts
api/src/localization/: localize_text.ts
api/src/routes/: countdown.ts  socials.ts
api/src/types/: bugreport.ts  countdown.ts
data/: countdown.json  messages.json
public/locales/: names.json
scripts/: cloudflare.mjs  init.ps1  init.sh
scripts/bash/: build.ps1  build.sh  init.sh
src/: .env.d.ts  index.ts
src/countdown/: countdown.ts
src/layouts/: LegalLayout.astro  Normal.astro
src/pages/: 404.astro  donate.astro  index.astro
src/styles/: globals.css  legals.css
web/: .gitignore  Dockerfile  astro.config.mjs  compose.yml  package-lock.json  package.json  tsconfig.json
web/src/: .env.d.ts
(+54 files in other folders)
