[workspace]
members = ["common", "core"]
resolver = "3"

[workspace.dependencies]
axum = {version = "0.8.8", features = ["macros"]}
tokio = {version = "1.50.0", features = ["full"]}
reqwest = {version = "0.13.2", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
tracing = {version = "0.144"}